admin/assets/stylesheets/elements/_access-arrangements.scss
.hide-checkbox-content {
  display: none;
}

.show-checkbox-content {
  margin-top: 10px;
  display: block;
  position: relative;
  .form-group {
    margin-bottom: pem(-10px);
  }
}

.access-arrangements-textarea {
  width: pem(460px);
}

.extra-space {
  margin-top: pem(40px);
}

#submitted-pupil-access-arrangements td {
  vertical-align: baseline;
}

.access-arrangements-pupil {
  text-decoration: underline;
  width: pem(200px);
}

.access-arrangements-list {
  width: pem(230px);
  line-height: pem(30px);
  > div {
    width: pem(235px);
  }
}

